nav and savings

--- a/FinPlan.Web/Components/Layout/MainLayout.razor
+++ b/FinPlan.Web/Components/Layout/MainLayout.razor
@@ -243,10 +243,10 @@
             </NavLink>
 
 
-            <NavLink class="menu-link" href="/cost-of-living">
+            <NavLink class="menu-link" href="/future-cost-of-living">
                 <span class="step-badge" aria-hidden="true">1</span>
                 <span class="bi bi-list-ul" aria-hidden="true"></span>
-                <span>Cost of Living Projection</span>
+                <span>Future Cost of Living</span>
             </NavLink>
 
             @*   <NavLink class="menu-link" href="/retirement-drawdown-calendar">
@@ -256,16 +256,16 @@
             </NavLink>   *@
 
 
-            <NavLink class="menu-link" href="/wealth-building">
+            <NavLink class="menu-link" href="/savings-wealth-building">
                 <span class="step-badge" aria-hidden="true">2</span>
                 <span class="bi bi-piggy-bank" aria-hidden="true"></span>
-                <span>Wealth Building</span>
+                <span>Savings & Wealth-Building</span>
             </NavLink>
 
-            <NavLink class="menu-link" href="/retirement-drawdown">
+            <NavLink class="menu-link" href="/retirement-income-planner">
                 <span class="step-badge" aria-hidden="true">3</span>
                 <span class="bi bi-wallet2" aria-hidden="true"></span>
-                <span>Retirement Drawdown</span>
+                <span>Retirement Income Planner</span>
             </NavLink>
             <NavLink class="menu-link" href="/about-rewealthen">
                 <span>About</span>
