--- a/FinPlan.Web/Components/Pages/Home.razor
+++ b/FinPlan.Web/Components/Pages/Home.razor
@@ -1,4 +1,7 @@
-﻿<!-- Audio Guide Button: speaker image that plays the guide on click -->
+﻿@page "/"
+@page "/home"
+
+<!-- Audio Guide Button: speaker image that plays the guide on click -->
 <div class="text-center my-4">
     <!-- Hidden audio element (played on user click) -->
     <audio id="guideAudio" src="/audio/how-to-use.mp3" preload="none"></audio>
@@ -30,7 +33,7 @@
         }
     }
 </style>
-@page "/home"
+
 
 <PageTitle>REWealth-en - Financial Planning Made Easy</PageTitle>
 
