--- a/FinPlan.Web/Pages/CostOfLiving/CostOfLivingPlannerNew.razor
+++ b/FinPlan.Web/Pages/CostOfLiving/CostOfLivingPlannerNew.razor
@@ -1,4 +1,4 @@
-@page "/cost-of-living"
+@page "/future-cost-of-living"
 @using FinPlan.Shared.Models.LivingCosts
 @using FinPlan.Web.Components
 @using FinPlan.Web.Pages.CostOfLiving.Components
