--- a/FinPlan.Web/Components/Pages/Savings.razor
+++ b/FinPlan.Web/Components/Pages/Savings.razor
@@ -249,7 +249,7 @@
 
 <div class="container-wire">
     <div class="page-header">
-        <h3>Wealth Building</h3>
+        <h3>Savings & Wealth Building</h3>
     </div>
 
     <div class="top-area">
