--- a/FinPlan.Web/Pages/CostOfLiving/CostOfLivingPlannerNew.razor
+++ b/FinPlan.Web/Pages/CostOfLiving/CostOfLivingPlannerNew.razor
@@ -1721,6 +1721,7 @@
                         Category = i.Category,
                         Subcategory = i.Subcategory,
                         CurrentValue = i.CurrentValue,
+                        Frequency = i.Frequency, // ADD MISSING FREQUENCY PROPERTY
                         AdjustOption = i.AdjustOption,
                         PerItemInflationPercent = i.PerItemInflationPercent,
                         PerItemInflationSource = i.PerItemInflationSource,
